src/snapshots/afrotd__parser__tests__rule_html_3.4.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.4.4 10-Sekunden-Abzug von der Game Clock - Foul
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Verursacht ein Team vor dem Wechsel des Team Ballbesitzes
                nach dem Zwei-Minuten-Timeout in der zweiten oder vierten
                Spielperiode ein Foul, durch das die Game Clock sofort
                angehalten und die Strafe für das Foul angenommen wird, können
                die Schiedsrichter, je nach Wahl des gefoulten Teams, 10
                Sekunden von der Game Clock abziehen (A.R. 3.4.4.I bis
                3.4.4.VIII). Die Fouls, die in diese Kategorie fallen, sind
                nachfolgend, jedoch nicht abschließend, aufgeführt:
                    <ol type="1">
                        <li>Jedes Foul, durch das der Snap verhindert wird (z.
                        B.: Encroachment, Fehlstart, Defense Offside mit
                        Kontakt in der neutralen Zone) (A.R. 3.4.4.III);
                        </li>
                        <li>absichtliches Wegwerfen des Balles, um die Game
                        Clock anzuhalten;
                        </li>
                        <li>unvollständiger illegaler Vorwärtspass;
                        </li>
                        <li>Rückpass ins Aus geworfen, um die Game Clock
                        anzuhalten;
                        </li>
                        <li>jedes andere Foul mit der Absicht die Game Clock
                        anzuhalten. Das gefoulte Team kann die Meterstrafe
                        annehmen und den 10-Sekunden-Abzug ablehnen. Wenn die
                        Meterstrafe abgelehnt wird, ist der 10-Sekunden-Abzug
                        durch die Regel aufgehoben.
                        </li>
                    </ol>
                </li>
                <li>Der 10-Sekunden-Abzug gilt nicht, wenn die Game Clock zum
                Zeitpunkt des Fouls nicht läuft oder wenn das Foul nicht dazu
                führt, dass die Game Clock sofort angehalten wird (z. B.:
                illegale Formation).
                </li>
                <li>Wird nach der Strafdurchführung der 10-Sekunden-Abzug
                durchgeführt, startet die Game Clock mit dem Signal des
                Referees. Wird der 10Sekunden-Abzug nicht durchgeführt, startet
                die Game Clock mit dem Snap. Beachte: Diese Regel überwiegt
                Regel 3.3.2.f (A.R. 3.3.2.VIII und 3.3.2.IX).
                </li>
                <li>Hat das foulende Team ein oder mehrere Timeouts zur
                Verfügung, kann es den 10-Sekunden-Abzug verhindern, in dem es
                ein Timeout verbraucht. In diesem Fall startet die Game Clock
                nach dem Timeout mit dem Snap.
                </li>
                <li>Der 10-Sekunden-Abzug findet keine Anwendung, wenn sich
                Fouls ereignen, die sich aufheben (A.R. 3.4.4.IV).
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.4.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
