src/snapshots/afrotd__parser__tests__rule_html_3.4.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.4.5 10-Sekunden-Abzug von der Game Clock - Zusammenfassung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die folgende Zusammenfassung soll verdeutlichen, wann ein
                10-SekundenAbzug von der Game Clock in Frage kommt:
            </p>
            <ol type="a">
                <li>Verletzungs-Timeout (Regel 3.3.6.f)
                </li>
                <li>Helmverlust-Timeout (Regel 3.3.10.b)
                </li>
                <li>Foul (Regel 3.4.4)
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.4.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
