src/snapshots/afrotd__parser__tests__rule_html_3.5.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.5.1 Spielerwechsel
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Zwischen den Perioden, nachdem Punkte erzielt wurden oder nach
                einem Try oder während einer Unterbrechung zwischen den Downs
                kann jedes Team eine beliebige Anzahl von Ersatzspielern auf
                das Spielfeld schicken, jedoch ausschließlich, um Spieler
                auszuwechseln oder eine Unterzahl auszugleichen.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.5.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
