src/snapshots/afrotd__parser__tests__rule_html_3.5.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.5.2 Legale Auswechselung
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein legaler Ersatzspieler darf einen Spieler ersetzen oder den
                Platz eines fehlenden Spielers auf dem Feld einnehmen,
                vorausgesetzt, dass keine der folgenden Auflagen verletzt
                worden ist.
            </p>
            <ol type="a">
                <li>Ein einwechselnder Ersatzspieler darf das Spielfeld oder
                eine Endzone nicht betreten, während der Ball im Spiel ist.
                </li>
                <li>Im Fall von mehr als elf Spielern bei einem Team darf kein
                Spieler das Spielfeld oder eine Endzone verlassen, während der
                Ball im Spiel ist (A.R. 3.5.2.I). Strafe (a-b): Live Ball Foul.
                5 Meter vom Previous Spot [S22].
                </li>
                <li>
                    <ol type="1">
                        <li>Ein legaler Ersatzspieler, der das Spielfeld
                        betreten will, muss es direkt von seiner Teamzone
                        kommend betreten und ein Ersatzspieler, Spieler oder
                        ausgewechselter Spieler, der das Spielfeld verlässt,
                        muss es an der Seitenlinie, an der sich seine Teamzone
                        befindet, verlassen und sich in Richtung seiner
                        Teamzone begeben.
                        </li>
                        <li>Ein ausgewechselter Spieler muss das Spielfeld
                        einschließlich der Endzonen sofort verlassen. Das
                        Verlassen des Huddles oder seiner Position durch einen
                        ausgewechselten Spieler innerhalb von drei Sekunden,
                        nachdem ein Ersatzspieler zum Spieler wurde, gilt als
                        sofortiges Verlassen.
                        </li>
                    </ol>
                </li>
                <li>Ersatzspieler, die zu Spielern werden (Regel 2.27.9),
                müssen wenigstens für einen Down im Spiel und ersetzte Spieler
                müssen wenigstens für einen Down aus dem Spiel bleiben. Dies
                gilt nicht bei einer Unterbrechung zwischen den Perioden, nach
                einem Punktgewinn oder wenn ein Timeout einem Team oder dem
                Referee, mit Ausnahme eines Live Ball im Aus oder eines
                unvollständigen Vorwärtspasses, angerechnet wird (A.R.
                3.5.2.III und 3.5.2.VI). Strafe (c-d): Dead Ball Foul. 5 Meter
                vom Succeeding Spot [S22].
                </li>
                <li>
                    <p>
                        Wenn Team A seine Ersatzspieler einwechselt, dürfen die
                        Schiedsrichter den Snap nicht eher erlauben, bis Team B
                        die Möglichkeit hatte, seinerseits Auswechselungen
                        vorzunehmen. Während einer Auswechselung oder einer
                        vorgetäuschten Auswechselung darf Team A im
                        offensichtlichen Versuch, die Defense zu
                        benachteiligen, sich nicht schnell zur Scrimmage Line
                        begeben. Wenn der Ball für spielbereit erklärt wurde,
                        dürfen die Schiedsrichter das Snappen des Balles nicht
                        zulassen, bis die Ersatzspieler von Team B ihre
                        Position eingenommen haben und ausgewechselte Spieler
                        das Spielfeld verlassen haben. Team B muss mit seinen
                        Ersatzspielern sofort reagieren.
                    </p>
                    <p>
                        <strong>Strafe: (Erster Verstoß) Dead Ball Foul.
                        Spielverzögerung von Team B für nicht sofortiges
                        Ausführen der Auswechselung(en), oder Spielverzögerung
                        von Team A, wenn Team A den Countdown der Play Clock
                        auslaufen lässt. 5 Meter vom Succeeding Spot [S21]. Der
                        Referee informiert dann den Head Coach, dass jede
                        weitere Anwendung dieser Taktik in einem unsportlichen
                        Verhalten Foul resultiert. Strafe: (Zweiter und jeder
                        weitere Verstoß) Dead Ball Foul, unsportliches
                        Verhalten des Teams. Ein Schiedsrichter pfeift sofort
                        ab. 15 Meter vom Succeeding Spot [S27].</strong>
                    </p>
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.5.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
