src/snapshots/afrotd__parser__tests__rule_html_4.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            4.1.1 Dead Ball wird zum Live Ball
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Nachdem ein Dead Ball spielbereit ist, wird er durch einen
                legalen Snap oder einen legalen Free Kick zum Live Ball. Ein
                Ball, der gesnappt oder beim Free Kick gekickt wird, bevor er
                spielbereit ist, bleibt dead (A.R. 2.16.4.I, A.R. 4.1.4.I und
                4.1.4.II, A.R. 7.1.3.IV, A.R. 7.1.5.I und 7.1.5.II).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.4.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
