src/snapshots/afrotd__parser__tests__rule_html_4.1.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            4.1.4 Ballfreigabe
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Spieler darf den Ball ins Spiel bringen, bevor dieser für
                spielbereit erklärt wird (A.R. 4.1.4.I und 4.1.4.II).
            </p>
            <p>
                <strong>Strafe: Dead Ball Foul, 5 Meter vom Succeeding Spot
                [S19].</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.4.1.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
