src/snapshots/afrotd__parser__tests__rule_html_4.2.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            4.2.2 Ball, der im Aus gehalten wird
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Ball, der sich im Besitz eines Spielers befindet, ist im
                Aus, wenn entweder der Ball oder ein Teil des Ballträgers den
                Boden oder irgendetwas berührt, das sich im Aus oder auf oder
                außerhalb der Begrenzungslinien befindet, ausgenommen einen
                anderen Spieler oder einen Schiedsrichter.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.4.2.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
